--- a/projects/intranet-portal/src/app/app.component.html
+++ b/projects/intranet-portal/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="example-container">
+<mat-drawer-container>
 
   <!-- Start: Боковая панель -->
   <mat-drawer mode="side" opened>
@@ -60,17 +60,17 @@
           <div class="side-bar-block-title mt-5">Полезные ресурсы</div>
           <div class="application-icons mt-3">
             <app-application-icon
-              [color]="'#303f9f'"
+              [color]="'#17446D'"
               [label]="'Сайт МРСК С-З'"
               [imageUrl]="'assets/images/mrsk-site.png'">
             </app-application-icon>
             <app-application-icon
-              [color]="'#303f9f'"
+              [color]="'#17446D'"
               [label]="'Портал МРСК С-З'"
               [imageUrl]="'assets/images/mrsk-portal.png'">
             </app-application-icon>
             <app-application-icon
-              [color]="'#303f9f'"
+              [color]="'#5B7DBD'"
               [label]="'ГИС-Профи'"
               [imageUrl]="'assets/images/gis-profi.png'">
             </app-application-icon>
