--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.html
@@ -12,8 +12,12 @@
         </div>
       </div>
     </div>
-    <div class="col pl-5 pt-3" style="margin-top: 24px;">
-      <app-weather></app-weather>
+    <div class="col pl-5 pt-3 d-flex flex-column align-items-end" style="margin-top: 24px;">
+      <div class="weather-block d-flex flex-column align-items-start">
+        <app-weather location="Мурманск" temperature="14" precipitations="Небольшой дождь" wind="10-12"></app-weather>
+        <app-weather class="mt-3" location="Мурмаши" temperature="10" precipitations="Ясно" wind="8-10"></app-weather>
+        <app-weather class="mt-3" location="Апатиты" temperature="8" precipitations="Солнечно" wind="6-8"></app-weather>
+      </div>
     </div>
   </div>
   <!-- End: Объявления -->
