INTRANET PORTAL: Layout modified

--- a/projects/intranet-portal/src/app/features/portal/components/search-bar/search-bar.component.less
+++ b/projects/intranet-portal/src/app/features/portal/components/search-bar/search-bar.component.less
@@ -1,4 +1,4 @@
-@import '../../styles/border-radius';
+@import '../../../../styles/border-radius';
 
 @search-bar-height: 40px;
 @search-bar-background-color: #ECEFF1;
