--- a/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
@@ -3,7 +3,7 @@
 
     <div class="articles equals" *ngSwitchCase="blockLayout.EQUALS">
       <div class="container-fluid">
-        <div class="row no-gutters">
+        <div class="row flex-column flex-md-row no-gutters">
           <div class="col">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/kupit-bilet-bez-pasporta-678x381.jpg')"></div>
@@ -31,7 +31,7 @@
             </a>
           </div>
         </div>
-        <div class="row no-gutters">
+        <div class="d-none d-md-flex row no-gutters">
           <div class="col">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/minenergo.jpg')"></div>
