--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
 
   <!-- Start: Объявления -->
-  <div class="row">
-    <div class="col-auto pl-2">
+  <div class="row flex-column-reverse flex-lg-row">
+    <div class="col-auto pl-2 mt-3 mt-md-0">
       <div class="row">
         <div class="col-12 block-title">Объявления</div>
       </div>
@@ -12,8 +12,9 @@
         </div>
       </div>
     </div>
-    <div class="col pl-5 pt-3 d-flex flex-column align-items-end" style="margin-top: 24px;">
-      <div class="weather-block d-flex flex-column align-items-start">
+
+    <div class="col pt-3 pl-0 pl-md-0 d-flex flex-column align-items-end" style="margin-top: 24px;">
+      <div class="weather-block d-flex flex-md-row flex-lg-column align-items-start">
         <app-weather location="Мурманск" temperature="14" precipitations="Небольшой дождь" wind="10-12"></app-weather>
         <app-weather class="mt-3" location="Мурмаши" temperature="10" precipitations="Ясно" wind="8-10"></app-weather>
         <app-weather class="mt-3" location="Апатиты" temperature="8" precipitations="Солнечно" wind="6-8"></app-weather>
