--- a/projects/messenger/src/app/features/messenger/components/messenger/messenger.component.html
+++ b/projects/messenger/src/app/features/messenger/components/messenger/messenger.component.html
@@ -1,4 +1,4 @@
-<!--<mat-progress-bar mode="indeterminate" *ngIf="isLoadingInProgress$ | async"></mat-progress-bar>-->
+<!--<mat-progress-bar mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>-->
 <mat-drawer-container class="application-sidebar">
   <mat-drawer mode="side" opened>
     <div class="header">
