INTRANET PORTAL: Some changes

--- a/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
@@ -30,6 +30,22 @@
               </div>
             </a>
           </div>
+
+          <div class="col">
+            <a href="" class="article">
+              <div class="background"style="background: url('assets/temp/r700.jpg')"></div>
+              <div class="details">
+                <div class="date-and-attachments">
+                  <div class="date">2 марта 2020</div>
+                  <div class="attachments">
+                    <mat-icon>attach_file</mat-icon>
+                    <span class="counter">1</span>
+                  </div>
+                </div>
+                <div class="title">Конкурс Российской Академии Наук</div>
+              </div>
+            </a>
+          </div>
         </div>
         <div class="d-none d-md-flex row no-gutters">
           <div class="col">
@@ -40,6 +56,21 @@
                   <div class="date">24 января 2020</div>
                 </div>
                 <div class="title">Внимание! Конкурс!</div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a href="" class="article">
+              <div class="background"style="background: url('assets/temp/_magazine.png')"></div>
+              <div class="details">
+                <div class="date-and-attachments">
+                  <div class="date">10 июля 2019</div>
+                  <div class="attachments">
+                    <mat-icon>attach_file</mat-icon>
+                    <span class="counter">1</span>
+                  </div>
+                </div>
+                <div class="title">Обозреватель энергетической отрасли, июль 2019</div>
               </div>
             </a>
           </div>
