INTRANET PORTAL: Portal ngrx refactored

--- a/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
@@ -30,7 +30,7 @@
               </div>
             </a>
           </div>
-
+          <!--
           <div class="col">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/r700.jpg')"></div>
@@ -46,8 +46,9 @@
               </div>
             </a>
           </div>
+          -->
         </div>
-        <div class="d-none d-md-flex row no-gutters">
+        <div class="row d-none d-md-flex no-gutters">
           <div class="col">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/minenergo.jpg')"></div>
@@ -74,6 +75,7 @@
               </div>
             </a>
           </div>
+          <!--
           <div class="col">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/_magazine.png')"></div>
@@ -89,6 +91,7 @@
               </div>
             </a>
           </div>
+          -->
         </div>
       </div>
     </div>
