--- a/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
@@ -30,7 +30,7 @@
               </div>
             </a>
           </div>
-          <div class="col" *ngIf="viewMode === view.EXTRA_EXTRA_EXTRA_LARGE">
+          <div class="col" *ngIf="(!sideBarOpened && viewMode === view.L) || viewMode === view.XXL || viewMode === view.XXXL">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/r700.jpg')"></div>
               <div class="details">
@@ -45,7 +45,21 @@
               </div>
             </a>
           </div>
-
+          <div class="col" *ngIf="viewMode === view.XXXL">
+            <a href="" class="article">
+              <div class="background"style="background: url('assets/temp/r700.jpg')"></div>
+              <div class="details">
+                <div class="date-and-attachments">
+                  <div class="date">2 марта 2020</div>
+                  <div class="attachments">
+                    <mat-icon>attach_file</mat-icon>
+                    <span class="counter">1</span>
+                  </div>
+                </div>
+                <div class="title">Конкурс Российской Академии Наук</div>
+              </div>
+            </a>
+          </div>
         </div>
         <div class="row d-none d-md-flex no-gutters">
           <div class="col">
@@ -61,6 +75,21 @@
           </div>
           <div class="col">
             <a href="" class="article">
+              <div class="background" style="background: url('assets/temp/_magazine.png')"></div>
+              <div class="details">
+                <div class="date-and-attachments">
+                  <div class="date">10 июля 2019</div>
+                  <div class="attachments">
+                    <mat-icon>attach_file</mat-icon>
+                    <span class="counter">1</span>
+                  </div>
+                </div>
+                <div class="title">Обозреватель энергетической отрасли, июль 2019</div>
+              </div>
+            </a>
+          </div>
+          <div class="col" *ngIf="(!sideBarOpened && viewMode === view.L) || viewMode === view.XXL || viewMode === view.XXXL">
+            <a href="" class="article">
               <div class="background"style="background: url('assets/temp/_magazine.png')"></div>
               <div class="details">
                 <div class="date-and-attachments">
@@ -74,7 +103,7 @@
               </div>
             </a>
           </div>
-          <div class="col" *ngIf="viewMode === view.EXTRA_EXTRA_EXTRA_LARGE">
+          <div class="col" *ngIf="viewMode === view.XXXL">
             <a href="" class="article">
               <div class="background"style="background: url('assets/temp/_magazine.png')"></div>
               <div class="details">
@@ -96,7 +125,7 @@
     <div class="articles one-lead-with-equals" *ngSwitchCase="blockLayout.ONE_LEAD_AND_EQUALS">
       <div class="container-fluid">
         <div class="row no-gutters">
-          <div class="col-auto">
+          <div class="col">
             <a href="" class="article lead">
               <div class="background"style="background: url('assets/images/zaborshikova.jpg')"></div>
               <div class="details">
@@ -138,7 +167,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col" *ngIf="viewMode === view.EXTRA_EXTRA_EXTRA_LARGE">
+              <div class="col" *ngIf="viewMode === view.XXXL">
                 <a href="" class="article">
                   <div class="background" style="background: url('assets/images/cikota.jpg')"></div>
                   <div class="details">
@@ -151,7 +180,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col" *ngIf="viewMode === view.EXTRA_EXTRA_EXTRA_LARGE">
+              <div class="col" *ngIf="viewMode === view.XXXL">
                 <a href="" class="article equal">
                   <div class="background" style="background: url('assets/images/govorov.jpg')"></div>
                   <div class="details">
@@ -192,7 +221,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col" *ngIf="viewMode === view.EXTRA_EXTRA_EXTRA_LARGE">
+              <div class="col" *ngIf="viewMode === view.XXXL">
                 <a href="" class="article">
                   <div class="background" style="background: url('assets/images/chuprov.jpg')"></div>
                   <div class="details">
@@ -205,7 +234,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col" *ngIf="viewMode === view.EXTRA_EXTRA_EXTRA_LARGE">
+              <div class="col" *ngIf="viewMode === view.XXXL">
                 <a href="" class="article">
                   <div class="background" style="background: url('assets/images/yatskovskaya.jpg')"></div>
                   <div class="details">
