--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.html
@@ -2,18 +2,23 @@
 
   <!-- Start: Объявления -->
   <div class="row flex-column-reverse flex-lg-row">
-    <div class="col-auto pl-2 mt-3 mt-md-0">
+    <div class="col pl-2 mt-3 mt-md-0">
       <div class="row">
         <div class="col-12 block-title">Объявления</div>
       </div>
       <div class="row mt-3">
         <div class="col-12 pl-0">
-          <app-articles-block [viewMode]="viewMode$ | async" [layout]="articlesLayout.EQUALS"></app-articles-block>
+          <app-articles-block
+            [viewMode]="viewMode$ | async"
+            [layout]="articlesLayout.EQUALS"
+            [sideBarOpened]="sideBarOpened$ | async"
+            class="w-100">
+          </app-articles-block>
         </div>
       </div>
     </div>
 
-    <div class="col pt-3 pl-0 pl-md-0 d-flex flex-column align-items-end" style="margin-top: 24px;">
+    <div class="col-auto pt-3 pl-0 pl-md-0 d-flex flex-column align-items-end" style="margin-top: 24px;">
       <div class="weather-block d-flex flex-md-row flex-lg-column align-items-start">
         <app-weather location="Мурманск" temperature="14" precipitations="Небольшой дождь" wind="10-12"></app-weather>
         <app-weather class="mt-3" location="Мурмаши" temperature="10" precipitations="Ясно" wind="8-10"></app-weather>
@@ -24,13 +29,13 @@
   <!-- End: Объявления -->
 
   <div class="row mt-5">
-    <div class="col-auto pl-2">
+    <div class="col pl-2">
       <div class="row">
         <div class="col-12 block-title">Наши люди</div>
       </div>
       <div class="row mt-3">
         <div class="col-12 pl-0">
-          <app-articles-block [layout]="articlesLayout.ONE_LEAD_AND_EQUALS"></app-articles-block>
+          <app-articles-block [viewMode]="viewMode$ | async" [layout]="articlesLayout.ONE_LEAD_AND_EQUALS"></app-articles-block>
         </div>
       </div>
     </div>
