INTRANET PORTAL: Layout modified

--- a/projects/intranet-portal/src/app/features/portal/components/portal-wrapper/portal-wrapper.component.html
+++ b/projects/intranet-portal/src/app/features/portal/components/portal-wrapper/portal-wrapper.component.html
@@ -112,7 +112,7 @@
   <mat-drawer-content>
     <div class="layout">
       <div class="header pl-5 pr-5">
-        <div class="d-flex flex-row justify-content-between w-100">
+        <div class="d-flex flex-row justify-content-between align-items-center w-100">
           <div class="logos">
             <img src="/assets/images/rosseti_logo.jpg" class="mr-3">
             <img src="/assets/images/mrsk_logo.jpg" alt="">
