--- a/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.less
+++ b/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.less
@@ -75,7 +75,7 @@
         justify-content: flex-end;
         width: @equals-article-width;
         //height: @equals-article-height;
-        height: 23vh;
+        height: 22vh;
         min-height: 200px;
         text-decoration: none;
         border: 1px solid #ECEFF1;
@@ -155,7 +155,7 @@
     &.one-lead-with-equals {
       .row {
         &:nth-of-type(n+2) {
-          margin-top: 10px;
+          // margin-top: 10px;
         }
       }
 
@@ -165,16 +165,24 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        width: @one-lead-and-equals-article-width;
-        height: @one-lead-and-equals-article-height;
+        // width: @one-lead-and-equals-article-width;
+        //height: @one-lead-and-equals-article-height;
+        width: 100%;
+        height: calc(~'100% - 5px');
+        // width: 100%;
+        // height: 100% !important;
+        // min-height: 22vh;
         margin-left: 10px;
+        box-sizing: border-box;
         text-decoration: none;
         border: 1px solid #ECEFF1;
         // .border-squircle(12%, 12%);
         border-radius: 4px;
         &.lead {
           width: @one-lead-and-equals-article-lead-width;
-          height: @one-lead-and-equals-article-lead-height;
+          //height: @one-lead-and-equals-article-lead-height;
+          //height: 47vh;
+          min-height: 410px;
           margin-left: 0px;
           &:hover {
             .details {
