--- a/projects/control/src/app/styles/sidebar.less
+++ b/projects/control/src/app/styles/sidebar.less
@@ -1,4 +1,11 @@
 @width: 300px;
+@header-height: 50px;
+@icon-width: 22px;
+@icon-height: 22px;
+@icon-color: @title-color;
+@title-font-family: 'Open Sans Light';
+@title-font-size: 20px;
+@title-color: #546E7A;
 @background-color: #FAF9F8;
 
 .sidebar {
@@ -11,6 +18,32 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: @header-height;
+
+    .icon {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .mat-icon {
+        width: @icon-width;
+        height: @icon-height;
+        font-size: @icon-height;
+        color: @icon-color;
+      }
+    }
+
+    .title {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      font-family: @title-font-family;
+      font-size: @title-font-size;
+      line-height: @title-font-size;
+      color: @title-color;
+    }
   }
 
   .sidebar-content {
