--- a/projects/control/src/app/features/applications/components/application-grid/application-grid.component.html
+++ b/projects/control/src/app/features/applications/components/application-grid/application-grid.component.html
@@ -1,5 +1,8 @@
 <div class="applications">
-  <a class="application p-3" [routerLink]="[application.id]" *ngFor="let application of applications">
+  <a class="application p-3"
+     [routerLink]="[application.id]"
+     *ngFor="let application of applications"
+     (click)="onSelect(application)">
     <div class="icon mr-3" *ngIf="application.icon">
       <mat-icon [ngStyle]="{'color': application.color}">{{application.icon}}</mat-icon>
     </div>
