--- a/projects/control/src/app/styles/application.less
+++ b/projects/control/src/app/styles/application.less
@@ -48,3 +48,14 @@ input, button, .mat-button {
   font-family: 'Open Sans Regular' !important;
   border-color: #673ab7 !important;
 }
+
+.mat-button {
+  font-family: 'Open Sans Regular' !important;
+  background: #F9F7FC;
+  .mat-icon {
+    width: 16px;
+    height: 16px;
+    font-size: 16px;
+  }
+}
+
