--- a/projects/control/src/app/features/applications/components/applications-list/applications-list.component.html
+++ b/projects/control/src/app/features/applications/components/applications-list/applications-list.component.html
@@ -1,2 +1,5 @@
-<app-application-grid class="mb-4" [applications]="applications$ | async"></app-application-grid>
+<app-application-grid class="mb-4"
+                      [applications]="applications$ | async"
+                      (select)="onSelectApplication($event)">
+</app-application-grid>
 <button class="pt-1 pb-1 pl-5 pr-5" mat-stroked-button color="primary">Добавить</button>
