CONTROL: Init guard added, breadcrumb added

--- a/projects/control/src/app/app.component.html
+++ b/projects/control/src/app/app.component.html
@@ -15,8 +15,10 @@
     <div class="header mb-5">
       <div class="current-section">
         <div class="section-title">
-          <span>{{sectionTitle}}</span>
-          <span>{{sectionSubtitle}}</span>
+          <div *ngFor="let item of breadcrumb$ | async; let i = index">
+            <span class="separator" *ngIf="i > 0">/</span>
+            <a [routerLink]="item.url">{{item.title}}</a>
+          </div>
         </div>
       </div>
       <div class="user-menu">
