--- a/projects/control/src/app/features/applications/components/application-grid/application-grid.component.html
+++ b/projects/control/src/app/features/applications/components/application-grid/application-grid.component.html
@@ -1,6 +1,7 @@
 <div class="applications">
   <a class="application p-3"
      [routerLink]="[application.id]"
+     [state]="{child: application.title}"
      *ngFor="let application of applications"
      (click)="onSelect(application)">
     <div class="icon mr-3" *ngIf="application.icon">
