CONTROL: New application feature added

--- a/projects/control/src/app/app.component.html
+++ b/projects/control/src/app/app.component.html
@@ -2,10 +2,10 @@
 <div class="application">
   <div class="sidebar p-4">
     <div class="sidebar-header mb-5">
-      <div class="icon mr-2">
+      <div class="icon">
         <mat-icon color="primary">settings</mat-icon>
       </div>
-      <div class="title">Панель управления</div>
+      <div class="title">Панель<br>управления</div>
     </div>
     <div class="sidebar-content">
       <app-menu [items]="menu$ | async"></app-menu>
