--- a/projects/control/src/app/components/menu/menu.component.less
+++ b/projects/control/src/app/components/menu/menu.component.less
@@ -107,6 +107,10 @@
           &:hover {
             color: @icon-color-hover;
           }
+
+          &.selected {
+            color: @icon-color-selected;
+          }
         }
       }
     }
