--- a/projects/control/src/styles.less
+++ b/projects/control/src/styles.less
@@ -3,6 +3,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 
 @import '../src/app/styles/fonts';
+@import '../src/app/styles/dialogs';
 @import '../src/app/styles/application';
 @import '../src/app/styles/sidebar';
 
