--- a/projects/control/src/app/features/applications/components/applications-list/applications-list.component.html
+++ b/projects/control/src/app/features/applications/components/applications-list/applications-list.component.html
@@ -2,4 +2,9 @@
                       [applications]="applications$ | async"
                       (select)="onSelectApplication($event)">
 </app-application-grid>
-<button class="pt-1 pb-1 pl-5 pr-5" mat-stroked-button color="primary">Добавить</button>
+<button class="pt-1 pb-1 pl-5 pr-5"
+        mat-stroked-button
+        color="primary"
+        (click)="openNewApplicationDialog()">
+  Добавить
+</button>
