--- a/projects/control/src/app/features/applications/components/application-details/application-details.component.html
+++ b/projects/control/src/app/features/applications/components/application-details/application-details.component.html
@@ -1,3 +1,23 @@
-<p>
-  application-details works!
-</p>
+<div class="application-details">
+  <div class="column">
+
+    <div class="details-section">
+      <div class="section-label mb-4">О приложении</div>
+      <div class="section-content">
+
+        <div class="d-flex flex-row">
+          <div class="app-icon">
+            <mat-icon></mat-icon>
+          </div>
+          <div class="app-details">
+            <span class="app-title"></span>
+            <span class="app-description"></span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+  <div class="column"></div>
+</div>
