--- a/projects/intranet-portal/src/app/features/portal/components/portal-wrapper/portal-wrapper.component.html
+++ b/projects/intranet-portal/src/app/features/portal/components/portal-wrapper/portal-wrapper.component.html
@@ -80,24 +80,24 @@
           <!-- Start: Соцсети -->
           <!--
           <div class="side-bar-block-title mt-5">Мы в соцсетях</div>
-          <div class="application-icons mt-3">
-            <app-application-icon
+          <div class="app-icons mt-3">
+            <app-app-icon
               [color]="'#303f9f'"
               [label]="'Сайт МРСК С-З'"
               [imageUrl]="'assets/images/mrsk-site.png'">
-            </app-application-icon>
-            <app-application-icon
+            </app-app-icon>
+            <app-app-icon
               [color]="'#303f9f'"
               [label]="'Портал МРСК С-З'"
               [imageUrl]="'assets/images/mrsk-portal.png'">
-            </app-application-icon>
-            <app-application-icon
+            </app-app-icon>
+            <app-app-icon
               [color]="'#303f9f'"
               [label]="'ГИС-Профи'"
               [imageUrl]="'assets/images/gis-profi.png'">
-            </app-application-icon>
+            </app-app-icon>
           </div>
-          <div class="application-icons mt-3">
+          <div class="app-icons mt-3">
             <div class="banner full-width"></div>
           </div>
           -->
